src/objects/XML_Message__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buffered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buffered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Element_Name__c</fullName>
        <label>Element Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Namespace__c</fullName>
        <label>Element Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Tag__c</fullName>
        <formula>&quot;&lt;/&quot; &amp; Element_Name__c &amp; &quot;&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name_Element__c</fullName>
        <label>Service Name Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Namespace__c</fullName>
        <label>Service Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Tag__c</fullName>
        <formula>&quot;&lt;&quot; &amp; Element_Name__c &amp; &quot;&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>XML Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Element_Name__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>XML Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XML Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>